--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,4 +33,5 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      #run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --configuration Release --logger "console;verbosity=detailed"
