--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,4 +34,4 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       #run: dotnet test --no-build --verbosity normal
-      run: dotnet test --no-build --configuration Release --logger "console;verbosity=detailed"
+      run: dotnet test #--no-build --configuration Release --logger "console;verbosity=detailed"
