--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 7.0.x
+        dotnet-version: [ '3.1.x', '6.0.x', '7.0.x' ]
     - name: Install Docker
       run: |
         sudo apt-get update
@@ -33,5 +33,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      #run: dotnet test --no-build --verbosity normal
-      run: dotnet test #--no-build --configuration Release --logger "console;verbosity=detailed"
+      run: dotnet test --no-build --verbosity normal
