--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: [ '3.1.x', '6.0.x', '7.0.x' ]
+        dotnet-version: 7.0.x
     - name: Install Docker
       run: |
         sudo apt-get update
